# mySNcurve

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/material/: CMakeLists.txt  fatigueMaterialSN.cpp  fatigueMaterialSN.h  standardSN.cpp  standardSN.h
test/: CMakeLists.txt
test/material_test/: fatigueMaterialSN_GeneralTest.cpp  fatigueMaterialSN_GeneralTest.h  standardSN_GeneralTest.cpp  standardSN_GeneralTest.h
